log/build_2022-12-17_19-32-56/colreg_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/filip/ros2_ws/install/colreg_package/lib/python3.10/site-packages/colreg_package/tcpa_dcpa.py", line 101
    def determine_collsion_risk(self, tcpa, dcpa)
                                                 ^
SyntaxError: expected ':'

